salesforce/force-app/main/default/objects/Climber__c/Climber__c.object-meta.xml
<CustomObject>
    <description>Represents a climber's coaching context. Stores goal grade and agent-set training focus, linked to their Smear app account via Smear_User_Id__c.</description>
    <label>Climber</label>
    <nameField>
        <label>Climber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Climbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>