salesforce/force-app/main/default/objects/Climber__c/fields/Goal_Grade__c.field-meta.xml
<CustomField>
    <fullName>Goal_Grade__c</fullName>
    <description>Target V-scale grade value (VB=-1, V0=0, V1=1 … V10+=11). Set by the climber via the agent chat.</description>
    <label>Goal Grade (V-scale value)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>