salesforce/force-app/main/default/objects/Climber__c/fields/Smear_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Smear_User_Id__c</fullName>
    <description>Supabase auth.users UUID for this climber. Used as the userId parameter when calling the Smear GraphQL endpoint to fetch live performance data.</description>
    <externalId>true</externalId>
    <label>Smear User ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>