salesforce/force-app/main/default/objects/Climber__c/fields/Training_Focus__c.field-meta.xml
<CustomField>
    <fullName>Training_Focus__c</fullName>
    <description>Current training focus set by coach, e.g. "overhang volume", "grade projection", "footwork".</description>
    <label>Training Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>